--- a/Views/Movies/Index.cshtml
+++ b/Views/Movies/Index.cshtml
@@ -51,7 +51,7 @@
         
 }
     </tbody>
-    <form asp-controller="Movies" asp-action="Index">
+    <form asp-controller="Movies" asp-action="Index" method="get">
     <p>
         <label>Title: <input type="text" name="SearchString" /></label>
         <input type="submit" value="Filter" />
